Wed Feb 18 17:31:52 1998  Tom Yu  <tlyu@mit.edu>

	* windows.in: Rewrite some of the directory syntax.

	* pre.in: Rewrite some of the directory syntax.

	* mac-pre.in: Rewrite some of the directory syntax.

Fri Feb 13 22:16:51 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* config.guess, config.sub: Applied lxs's changes to add support
 		for Rhapsody DR1.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* pre.in: SUBDIRS now also includes LOCAL_SUBDIRS, which is
		defined in the Makefile.in to control the recursive
		descent through the subdirectories.  This is used so
		that the subdirectories can be defined in Makefile.in,
		instead of in the individual configure.in files.

Tue Nov 18 19:20:59 1997  Tom Yu  <tlyu@mit.edu>

	* pre.in: Clean up up .ct.c rule.

	* lib.in (clean-libs): Remove lib$(LIB)$(SHLIBSEXT) as well.

Mon Oct 20 14:27:19 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* pre.in (INSTALL_SETUID): Explicitly set the owner of the files
		which are installed setuid root.

Wed Aug  6 20:23:32 1997  Tom Yu  <tlyu@mit.edu>

	* pre.in: Add $(HESIOD_LIBS) to KADMSRV_LIBS.

Sun Mar  9 22:28:34 1997  Tom Yu  <tlyu@mit.edu>

	* lib.in: Add provisions for making shared libraries of the same
	major version number compatible.

Sun Mar  2 19:54:26 1997  Ezra Peisach  <epeisach@mit.edu>

	* pre.in (KRB4COMPAT_DEPLIBS): Depends on KRB5_BASE_DEPLIBS (not
	        KRB5_BASE_DEPLBS)

Sat Mar  1 14:33:21 1997  Tom Yu  <tlyu@mit.edu>

	* libobj.in: Change .c.so and .c.po rules to work better with
	compilers that insist that $(CC) -fpic -c foo.c -o foo.so is
	wrong; basically, cheat and do -o foo.so.o, etc.

Thu Feb 27 17:40:51 1997  Tom Yu  <tlyu@mit.edu>

	* pre.in: Add recursion hooks for distclean.

	* post.in: Change recursion rules to skip recursion if NORECURSE
	is non-null; add distclean support; don't remove config.log,
	etc. if not doing distclean.

Sat Feb 22 18:42:32 1997  Richard Basch  <basch@lehman.com>
