@@ -68,6 +68,7 @@ SUBDIRS = @subdirs@ $(LOCAL_SUBDIRS)
 srcdir = @srcdir@
 SRCTOP = @srcdir@/$(BUILDTOP)
 VPATH = @srcdir@
+CONFIG_RELTOPDIR = @CONFIG_RELTOPDIR@
 
 CPPFLAGS = @CPPFLAGS@
 DEFS = @DEFS@ $(CPPFLAGS)
@@ -161,6 +162,7 @@ AWK = @AWK@
 LEX = @LEX@
 LEXLIB = @LEXLIB@
 YACC = @YACC@
+AUTOCONF = @AUTOCONF@
 
 HOST_TYPE = @HOST_TYPE@
 SHEXT = @SHEXT@
